--- a/News_Dataset_Cleanup.ipynb
+++ b/News_Dataset_Cleanup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1X8dhhGo4Uon13tSe12bSZRE3dwjcNg0i",
-      "authorship_tag": "ABX9TyPVZ0LKsiEY60kiip+zgo2C",
+      "authorship_tag": "ABX9TyPKMK/3Or9MENKGypJLfdE8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -557,7 +557,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Check null**"
+        "**Cek data null**"
       ],
       "metadata": {
         "id": "GqgyTU_mNBM4"
@@ -601,7 +601,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Drop data if fulltext = null**"
+        "**Hapus data jika fulltext = null**"
       ],
       "metadata": {
         "id": "KWDLe0Q1NcCw"
@@ -646,43 +646,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Cek Apakah Kata 'Adaro' Ada di Judul Pertama**"
-      ],
-      "metadata": {
-        "id": "KpSVV6KfTOLS"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "a = 'Adaro' in df['Title'][0]\n",
-        "print(df['Title'][0])\n",
-        "print(a)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TDGkww2GTPEH",
-        "outputId": "466dd2b8-8abd-40f3-f25f-4556447f2a3b"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[PENIPUAN] Tautan Pendaftaran Lowongan Kerja Adaro Indonesia\n",
-            "True\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Retrieve Narasi from News**"
+        "**Ambil narasi dari berita**"
       ],
       "metadata": {
         "id": "fzKeksX5OOyC"
@@ -1098,7 +1062,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Check narasi**"
+        "**Cek narasi**"
       ],
       "metadata": {
         "id": "T7TV4yH1CYXs"
@@ -1198,7 +1162,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Cleanup narasi**"
+        "**Bersihkan narasi**"
       ],
       "metadata": {
         "id": "RJxvM9GtOgD6"
@@ -1617,7 +1581,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Check short narasi**"
+        "**Cek narasi pendek**"
       ],
       "metadata": {
         "id": "vW6CdTArOxaE"
@@ -1677,7 +1641,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Add hoax label**"
+        "**Tambah label Hoax**"
       ],
       "metadata": {
         "id": "8qcDgm0DO4gN"
