--- a/News_Dataset_Cleanup.ipynb
+++ b/News_Dataset_Cleanup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1X8dhhGo4Uon13tSe12bSZRE3dwjcNg0i",
-      "authorship_tag": "ABX9TyPKMK/3Or9MENKGypJLfdE8",
+      "authorship_tag": "ABX9TyN2N0fhPbcqBltEmQfF1TgB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -601,7 +601,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Hapus data jika fulltext = null**"
+        "**Hapus data jika ada kolom/data = null**"
       ],
       "metadata": {
         "id": "KWDLe0Q1NcCw"
@@ -691,19 +691,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# df_with_index = df.reset_index()\n",
-        "# news_with_narasi = []\n",
-        "\n",
-        "# for _, row in tqdm(df_with_index[['index', 'FullText']].iterrows(), total=df_with_index.shape[0]):\n",
-        "#     index = row['index']\n",
-        "#     text = row['FullText']\n",
-        "#     if not str(text) == 'nan':\n",
-        "#         narasi = retrieve_narasi_from_text(text)\n",
-        "#     else:\n",
-        "#         narasi = ''\n",
-        "#     news_with_narasi.append([index, text, narasi])\n",
-        "\n",
-        "df['Narasi'] = df['FullText'].map(lambda x: retrieve_narasi_from_text(x))\n",
+        "df['Narasi'] = df['FullText'].apply(retrieve_narasi_from_text)\n",
         "df.head()"
       ],
       "metadata": {
@@ -1650,6 +1638,7 @@
     {
       "cell_type": "code",
       "source": [
+        "df = df[df['Clean Narasi'].str.len() > 10]  # Jaga kualitas data sebelum masuk ML pipeline\n",
         "df['hoax'] = 1"
       ],
       "metadata": {
@@ -1997,7 +1986,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df.to_csv(\"dataset_turnbackhoax_10_cleaned.csv\")"
+        "df.to_csv(\"dataset_turnbackhoax_10k_cleaned.csv\", index=False, encoding='utf-8-sig')"
       ],
       "metadata": {
         "id": "EY3BHuuFO_g5"
